--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./utils/images/logo.png">
+    <link rel="icon" href="https://i.ibb.co/5h2cN8x/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Kranky&family=Permanent+Marker&family=Playfair+Display&family=Tangerine:wght@700&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./utils/css/style.css">
@@ -19,7 +19,7 @@
     <header class="header" id="header">
         <div class="header__top">
             <figure class="header__top__figure">
-                <img id="navHeader" class="header__top__figure--logo" src="./utils/images/logo.png" alt="">
+                <img id="navHeader" class="header__top__figure--logo" src="https://i.ibb.co/5h2cN8x/logo.png" alt="">
             </figure>       
             <ul class="header__top__nav">
                 <li id="headNavProject" class="header__top__nav__li">
@@ -38,7 +38,7 @@
                 <h1 class="header__body__h1">Seeking how can<br>get better day a day.<br>Developed JavaScript</h1>
             </div>
             <div class="container--header-body">
-                <img class="header__body__img" src="./utils/images/foto-fondo.png" alt="">
+                <img class="header__body__img" src="https://i.ibb.co/8PHv962/foto-fondo.png" alt="">
             </div>
         </div>
     </header>
@@ -49,8 +49,8 @@
             <div>
                 <h2 class="projects__one__h2">Spaceship VS</h2>
                 <figure class="projects__one__figure">
-                    <img class="projects__one__figure__img" src="./utils/images/nave.png" alt="">
-                    <img id="lightning" class="projects__one__figure__img--two hidden" src="./utils/images/rayo.png" alt="">
+                    <img class="projects__one__figure__img" src="https://i.ibb.co/BBQPgmV/nave.png" alt="">
+                    <img id="lightning" class="projects__one__figure__img--two hidden" src="https://i.ibb.co/G2Z23nL/rayo.png" alt="">
                 </figure>
                 <h3 class="projects__one__h3"><span>It´s a little</span> game for two players <span>when you can destroy a your friend or... enemy</span></h3>
             </div>
@@ -59,7 +59,7 @@
         <article id="projectTwo" class="projects__two">
             <div>
                 <figure class="projects__two__figure">
-                    <img id="paper" class="projects__two__figure__img" src="./utils/images/papel.png" alt="">
+                    <img id="paper" class="projects__two__figure__img" src="https://i.ibb.co/T1JT19F/papel.png" alt="">
                 </figure>
                 <h2 class="projects__two__h2">Rock Paper Scissor</h2>
                 <h3 class="projects__two__h3">The typical game<span>, soon, rock, paper, scissor, lizard, spock 🖖</span></h3>
@@ -71,8 +71,8 @@
                 <h2 class="projects__two__h2">Character sheet D&D</h2>
                 <h3 class="projects__three__h3"><span>Esta vez en español, </span>hoja de personajes de D&D<span> ayudas para hacer tu personaje más rápido</span></h3>
                     <figure class="projects__three__figure">
-                        <img id="dyd" class="projects__three__figure__img" src="./utils/images/dragon.png" alt="">
-                        <img id="dydComplete" class="projects__three__figure__img--complete" src="./utils/images/logodyd.png" alt="">
+                        <img id="dyd" class="projects__three__figure__img" src="https://i.ibb.co/dP0skG4/dragon.png" alt="">
+                        <img id="dydComplete" class="projects__three__figure__img--complete" src="https://i.ibb.co/bFzxKYc/logodyd.png" alt="">
                     </figure>
             </div>
         </article>
@@ -81,8 +81,8 @@
             <div class="project__four__div">
                 <h3 class="projects__four__h3"><span>Other </span>project to practice <span>what i have learned</span></h3>
                 <figure class="projects__four__figure">
-                    <img id="raiz" class="projects__four__figure__img" src="./utils/images/raiz.png" alt="">
-                    <img id="arbol" class="projects__four__figure__img--complete" src="./utils/images/arbol.png" alt="">
+                    <img id="raiz" class="projects__four__figure__img" src="https://i.ibb.co/9bPGg1s/raiz.png" alt="">
+                    <img id="arbol" class="projects__four__figure__img--complete" src="https://i.ibb.co/qp4hDqn/arbol.png" alt="">
                 </figure>
                 <h2 class="projects__four__h2">Other Projects</h2>
             </div>
@@ -95,63 +95,63 @@
             <div class="education__code--program">
                 <div class="container--education--code">
                     <div></div>
-                    <p id="html">HTML</p>
+                    <p id="htmlT">HTML</p>
                 </div>
                 <div class="container--education--code">
                     <div></div>
-                    <p id="css">Css</p>
+                    <p id="cssT">Css</p>
                 </div>
                 <div class="container--education--code">
                     <div></div>
-                    <p id="javascript">Javascript</p>
+                    <p id="javascriptT">Javascript</p>
                 </div>
                 <div class="container--education--code">
                     <div></div>
-                    <p id="dataBase">Data Base</p>
+                    <p id="dataBaseT">Data Base</p>
                 </div>
                 <div class="container--education--code">
                     <div></div>
-                    <p id="arduino">Arduino</p>
+                    <p id="arduinoT">Arduino</p>
                 </div>
                 <div class="container--education--code">
                     <div></div>
-                    <p id="communication">Communication</p>
+                    <p id="communicationT">Communication</p>
                 </div>    
             </div>
         </article>
-        <article class="education__dev">
+        <article id="education__dev" class="education__dev">
             <div class="education__dev__html">
-                <img class="education__dev__html__img html hidden" src="./utils/images/html.png" alt="">
+                <img class="education__dev__html__img html hidden" src="https://i.ibb.co/rkdzCTQ/html.png" alt="">
             </div>
             <div class="education__dev__css">
-                <img class="education__dev__css__img css hidden" src="./utils/images/css.png" alt="">
+                <img class="education__dev__css__img css hidden" src="https://i.ibb.co/KbwCjRd/css.png" alt="">
             </div>
             <div class="education__dev__sass">
-                <img class="education__dev__sass__img css hidden" src="./utils/images/sass.png" alt="">
+                <img class="education__dev__sass__img css hidden" src="https://i.ibb.co/wMFXkSv/sass.png" alt="">
             </div>
             <div class="education__dev__js">
-                <img class="education__dev__js__img javascript hidden" src="./utils/images/js.png" alt="">
+                <img class="education__dev__js__img javascript hidden" src="https://i.ibb.co/zhYwYtz/js.png" alt="">
             </div>
             <div class="education__dev__typescript">
-                <img class="education__dev__typescript__img javascript hidden" src="./utils/images/typescript.png" alt="">
+                <img class="education__dev__typescript__img javascript hidden" src="https://i.ibb.co/42YZHxz/typescript.png" alt="">
             </div>
             <div class="education__dev__node">
-                <img class="education__dev__node__img javascript hidden" src="./utils/images/node.png" alt="">
+                <img class="education__dev__node__img javascript hidden" src="https://i.ibb.co/M99SdpJ/node.png" alt="">
             </div>
             <div class="education__dev__johnny-five">
                 <img class="education__dev__johnny-five__img javascript hidden" src="./utils/images/j5-logo.svg" alt="">
             </div>
             <div class="education__dev__arduino">
-                <img class="education__dev__arduino__img arduino hidden" src="./utils/images/arduino.png" alt="">
+                <img class="education__dev__arduino__img arduino hidden" src="https://i.ibb.co/pzNGMm3/arduino.png" alt="">
             </div>
             <div class="education__dev__sql">
-                <img class="education__dev__sql__img dataBase hidden" src="./utils/images/sql-logo.png" alt="">
+                <img class="education__dev__sql__img dataBase hidden" src="https://i.ibb.co/YByv0t9/sql-logo.png" alt="">
             </div>
             <div class="education__dev__mysql">
-                <img class="education__dev__mysql__img dataBase hidden" src="./utils/images/mysql.png" alt="">
+                <img class="education__dev__mysql__img dataBase hidden" src="https://i.ibb.co/PDC7fLP/mysql.png" alt="">
             </div>
             <div class="education__dev__git">
-                <img class="education__dev__git__img communication other hidden" src="./utils/images/git-logo.png" alt="">
+                <img class="education__dev__git__img communication other hidden" src="https://i.ibb.co/nsYnw0h/git-logo.png" alt="">
             </div>
             <div class="education__dev__uml">
                 <img class="education__dev__git__img communication other hidden" src="https://image.winudf.com/v2/image/dXRuZy5yb21hbi5hcHAudW1sX2ljb25fMF9hYzNmZGY5OQ/icon.png?w=170&fakeurl=1" alt="">
@@ -164,7 +164,7 @@
             <h1 class="footer__contacts--title">Contacts</h1>
             <div class="footer__contacts--red">
                 <img src="https://i.pinimg.com/originals/58/f4/72/58f4723d8f23906bdcb058604075ad2a.png" alt="">
-                <img src="./utils/images/git-logo.png" alt="">
+                <img src="https://i.ibb.co/nsYnw0h/git-logo.png" alt="">
                 <img src="https://pluspng.com/img-png/linkedin-png-256x256-px-linkedin-logo-png-download-256.png" alt="">
             </div>
             <div class="footer__contact--email">
