--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                 <img src="https://pluspng.com/img-png/linkedin-png-256x256-px-linkedin-logo-png-download-256.png" alt="">
             </div>
             <div class="footer__contact--email">
-                <p>Want you work together? Send me a email</p>
+                <p>Do you want you work together? Send me an email</p>
                 <div class="footer__contact--email--send">
-                    <input id="send" class="button" type="button" value="Send email">
+                    <input id="send" class="button" type="button" value="Send an email">
                 </div>
             </div>
         </div>
