url de contactos

--- a/index.html
+++ b/index.html
@@ -164,9 +164,14 @@
         <div class="footer__contacts">
             <h1 class="footer__contacts--title">Contacts</h1>
             <div class="footer__contacts--red">
-                <img src="https://i.pinimg.com/originals/58/f4/72/58f4723d8f23906bdcb058604075ad2a.png" alt="">
-                <img src="https://i.ibb.co/nsYnw0h/git-logo.png" alt="">
-                <img src="https://pluspng.com/img-png/linkedin-png-256x256-px-linkedin-logo-png-download-256.png" alt="">
+                <a href="">
+                    <img src="https://i.pinimg.com/originals/58/f4/72/58f4723d8f23906bdcb058604075ad2a.png" alt="">
+                </a>
+                <a href="">
+                    <img src="https://i.ibb.co/nsYnw0h/git-logo.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/desarrolladorenriquerodriguez/">
+                    <img src="https://pluspng.com/img-png/linkedin-png-256x256-px-linkedin-logo-png-download-256.png" alt=""></a>
             </div>
             <div class="footer__contact--email">
                 <p>Do you want you work together? Send me an email</p>
