--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
         <div class="footer__contacts">
             <h1 class="footer__contacts--title">Contacts</h1>
             <div class="footer__contacts--red">
-                <a href="">
+                <a href="https://www.facebook.com/Enrique-Rodriguez-Desarrolador-101686708213107">
                     <img src="https://i.pinimg.com/originals/58/f4/72/58f4723d8f23906bdcb058604075ad2a.png" alt="">
                 </a>
-                <a href="">
+                <a href="https://github.com/EnriqueRodriguezDv">
                     <img src="https://i.ibb.co/nsYnw0h/git-logo.png" alt="">
                 </a>
                 <a href="https://www.linkedin.com/in/desarrolladorenriquerodriguez/">
